--- a/styles/tweaks.less
+++ b/styles/tweaks.less
@@ -1,7 +1,7 @@
-// tweak: { "type" : "color", "title" : "Issue Module BG Color" }
+// tweak: { "type" : "color", "title" : "Issue Module BG Color", "js" : true }
 @issueModuleColor: #000;
 
 
 
-// tweak: { "type" : "color", "title" : "Subscription Module BG Color" }
+// tweak: { "type" : "color", "title" : "Subscription Module BG Color", "js" : true }
 @subModuleColor: #000;
