squarespace deploy Jun 25, 2019 4:05 PM

--- a/styles/tweaks.less
+++ b/styles/tweaks.less
@@ -9,4 +9,4 @@
 
 
 // tweak: { "type" : "checkbox", "title" : "Activate Live Shop", "active" : false, "js" : true }
-.is-shop-active {}
+.activate-live-shop {}
